View: Unify stop recording/playback
Closes #189

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -113,10 +113,9 @@ BEGIN
     POPUP "&Movie"
     BEGIN
         MENUITEM "S&tart Movie Recording...",   IDM_START_MOVIE_RECORDING, GRAYED
-        MENUITEM "Stop Movie &Recording",       IDM_STOP_MOVIE_RECORDING, GRAYED
-        MENUITEM SEPARATOR
         MENUITEM "Start Movie &Playback...",    IDM_START_MOVIE_PLAYBACK
-        MENUITEM "St&op Movie Playback",        IDM_STOP_MOVIE_PLAYBACK, GRAYED
+        MENUITEM SEPARATOR
+        MENUITEM "St&op Movie",                 IDM_STOP_MOVIE, GRAYED
         MENUITEM SEPARATOR
         POPUP "Recent Movies"
         BEGIN
