--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -148,6 +148,8 @@
     <ClInclude Include="..\..\lua\modules\input.h" />
     <ClInclude Include="..\..\lua\modules\savestate.h" />
     <ClInclude Include="..\..\lua\modules\wgui.h" />
+    <ClInclude Include="..\..\main\capture\encoders\AVIEncoder.h" />
+    <ClInclude Include="..\..\main\capture\encoders\Encoder.h" />
     <ClInclude Include="..\..\main\capture\EncodingManager.h" />
     <ClInclude Include="..\..\main\capture\AVIComp.h" />
     <ClInclude Include="..\..\main\capture\Resampler.h" />
@@ -211,8 +213,8 @@
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
     <ClCompile Include="..\..\lua\LuaCallbacks.cpp" />
+    <ClCompile Include="..\..\main\capture\encoders\AVIEncoder.cpp" />
     <ClCompile Include="..\..\main\capture\EncodingManager.cpp" />
-    <ClCompile Include="..\..\main\capture\AVIComp.cpp" />
     <ClCompile Include="..\..\main\capture\Resampler.cpp" />
     <ClCompile Include="..\..\main\debughook.cpp" />
     <ClCompile Include="..\..\main\helpers\io_helpers.cpp" />
