--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -150,8 +150,8 @@
     <ClInclude Include="..\..\lua\modules\wgui.h" />
     <ClInclude Include="..\..\main\capture\encoders\AVIEncoder.h" />
     <ClInclude Include="..\..\main\capture\encoders\Encoder.h" />
+    <ClInclude Include="..\..\main\capture\encoders\FFmpegEncoder.h" />
     <ClInclude Include="..\..\main\capture\EncodingManager.h" />
-    <ClInclude Include="..\..\main\capture\AVIComp.h" />
     <ClInclude Include="..\..\main\capture\Resampler.h" />
     <ClInclude Include="..\..\main\helpers\collection_helpers.h" />
     <ClInclude Include="..\..\main\helpers\math_helpers.h" />
@@ -214,6 +214,7 @@
     </ClCompile>
     <ClCompile Include="..\..\lua\LuaCallbacks.cpp" />
     <ClCompile Include="..\..\main\capture\encoders\AVIEncoder.cpp" />
+    <ClCompile Include="..\..\main\capture\encoders\FFmpegEncoder.cpp" />
     <ClCompile Include="..\..\main\capture\EncodingManager.cpp" />
     <ClCompile Include="..\..\main\capture\Resampler.cpp" />
     <ClCompile Include="..\..\main\debughook.cpp" />
