--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -78,7 +78,7 @@ BEGIN
         MENUITEM "Save State",                  IDM_SAVE_SLOT, GRAYED
         MENUITEM "Load State",                  IDM_LOAD_SLOT, GRAYED
         MENUITEM "&Save State As...",           IDM_SAVE_STATE_AS, GRAYED
-        MENUITEM "&Load State...",              IDM_LOAD_STATE_AS, GRAYED
+        MENUITEM "&Load State As...",           IDM_LOAD_STATE_AS, GRAYED
         MENUITEM SEPARATOR
         POPUP "Current Save S&tate"
         BEGIN
