--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -291,18 +291,17 @@ BEGIN
     CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,204,96,8
     CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,216,96,10
     CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
-    GROUPBOX        "Encoding",IDC_FPSTITLE2,6,84,215,48
+    GROUPBOX        "Encoding",IDC_FPSTITLE2,6,84,215,60
     CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,100,8
-    CONTROL         "Force internal avi capture",IDC_FORCEINTERNAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
-    CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,120,96,8
-    CONTROL         "Capture other windows",IDC_CAPTUREOTHER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,96,91,8
-    LTEXT           "Capture delay:",IDC_STATIC,114,114,49,12
-    EDITTEXT        IDC_CAPTUREDELAY,164,114,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
+    LTEXT           "Capture delay:",IDC_STATIC,114,96,49,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_CAPTUREDELAY,168,96,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Statusbar 0-index",IDC_STATUSBARZEROINDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,96,8
     CONTROL         "Autoincrement save slot",IDC_AUTOINCREMENTSAVESLOT,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,192,96,8
     LTEXT           "CPU Clock Speed Multiplier",IDC_CLOCK_SPD_MULT,12,228,144,8
     COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT,12,240,204,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    COMBOBOX        IDC_ENCODE_MODE,12,120,204,100,CBS_DROPDOWNLIST | WS_TABSTOP
 END
 
 IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 218
