View: Change "Encoding" groupbox header to "Capture" to improve consistency

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -291,7 +291,7 @@ BEGIN
     CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,204,96,8
     CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,216,96,10
     CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
-    GROUPBOX        "Encoding",IDC_FPSTITLE2,6,84,215,60
+    GROUPBOX        "Capture",IDC_FPSTITLE2,6,84,215,60
     CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,100,8
     CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
     LTEXT           "Capture delay:",IDC_STATIC,114,96,49,12,SS_CENTERIMAGE
