View: Rename screenshots folder mention in config dialog

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -227,7 +227,7 @@ BEGIN
     CONTROL         "Use Default (/plugin)",IDC_DEFAULT_PLUGINS_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,102,204,10
     GROUPBOX        "",IDC_SAVES_GROUP,6,138,216,30
     EDITTEXT        IDC_SAVES_DIR,12,150,144,12,ES_AUTOHSCROLL
-    CONTROL         "Use default (/screenshots)",IDC_DEFAULT_SCREENSHOTS_CHECK,
+    CONTROL         "Use default (/screenshot)",IDC_DEFAULT_SCREENSHOTS_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,174,204,10
     PUSHBUTTON      "Browse...",IDC_CHOOSE_SAVES_DIR,162,150,54,12
     CONTROL         "Use default (/save)",IDC_DEFAULT_SAVES_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,138,204,8
