--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -280,30 +280,31 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Interface",IDC_MESSAGES,6,6,216,42
     GROUPBOX        "Flow",IDC_FPSTITLE,6,54,215,30
-    GROUPBOX        "Core",IDC_CPUCORE,6,150,216,102
-    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,162,204,8
-    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,175,204,8
-    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,186,204,8
+    GROUPBOX        "Core",IDC_CPUCORE,6,174,216,102
+    CONTROL         "Interpreter",IDC_INTERP,"Button",BS_AUTORADIOBUTTON,12,186,204,8
+    CONTROL         "Dynamic Recompiler",IDC_RECOMP,"Button",BS_AUTORADIOBUTTON,12,199,204,8
+    CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,12,210,204,8
     EDITTEXT        IDC_SKIPFREQ,114,66,78,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,12,66,96,12,SS_CENTERIMAGE
     PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,66,14,12
-    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,198,96,8
-    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,210,96,8
-    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,210,96,8
-    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,222,96,10
+    CONTROL         "Audio Delay",IDC_ENABLE_AUDIO_DELAY,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,222,96,8
+    CONTROL         "Compiled Jump",IDC_ENABLE_COMPILED_JUMP,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,234,96,8
+    CONTROL         "Emulate float crashes",IDC_EMULATEFLOATCRASHES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,234,96,8
+    CONTROL         "WiiVC Rounding",IDC_ROUNDTOZERO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,246,96,10
     CONTROL         "Pause when unfocused",IDC_PAUSENOTACTIVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,18,96,8
-    GROUPBOX        "Capture",IDC_FPSTITLE2,6,84,215,60
+    GROUPBOX        "Capture",IDC_FPSTITLE2,6,84,215,90
     CONTROL         "Record resets",IDC_RECORD_RESETS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,96,100,8
     CONTROL         "Emulate SD Card",IDC_USESUMMERCART,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,96,8
-    LTEXT           "Capture delay:",IDC_STATIC,114,96,49,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_CAPTUREDELAY,168,96,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Capture delay:",IDC_STATIC,12,138,49,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_CAPTUREDELAY,66,138,42,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Statusbar 0-index",IDC_STATUSBARZEROINDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,96,8
     CONTROL         "Autoincrement save slot",IDC_AUTOINCREMENTSAVESLOT,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,198,96,8
-    LTEXT           "CPU Clock Speed Multiplier",IDC_CLOCK_SPD_MULT,12,234,96,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT,108,234,108,100,CBS_DROPDOWNLIST | WS_TABSTOP
-    COMBOBOX        IDC_ENCODE_MODE,12,120,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
-    COMBOBOX        IDC_ENCODE_SYNC,114,120,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,222,96,8
+    LTEXT           "CPU Clock Speed Multiplier",IDC_CLOCK_SPD_MULT,12,258,96,12,SS_CENTERIMAGE
+    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT,108,258,108,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    COMBOBOX        IDC_ENCODE_MODE,12,156,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    COMBOBOX        IDC_ENCODE_SYNC,120,156,96,100,CBS_DROPDOWNLIST | WS_TABSTOP
+    CONTROL         "Save video to savestates",IDC_SAVE_VIDEO_TO_ST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,120,96,8
 END
 
 IDD_MOVIE_DIALOG DIALOGEX 0, 0, 343, 218
