--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -60,7 +60,7 @@
     <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
         <ClCompile>
             <Optimization>Disabled</Optimization>
-            <AdditionalIncludeDirectories>../../lua;../../shared;../../;../../lib/zlib;../../main;../../lib/libdeflate;../../lib/xxhash;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+            <AdditionalIncludeDirectories>../../;../../lib/zlib;../../lib/lua/include;../../lib/libdeflate;../../lib/xxhash;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
             <PreprocessorDefinitions>WIN32;_WIN32;_DEBUG;_WINDOWS;__WIN32__;X86;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
             <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
             <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -71,7 +71,6 @@
             <CompileAs>CompileAsCpp</CompileAs>
             <UseFullPaths>false</UseFullPaths>
             <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
-            <AdditionalOptions>/FI "../main/debughook.h" %(AdditionalOptions)</AdditionalOptions>
             <LanguageStandard>stdcpplatest</LanguageStandard>
             <SDLCheck>true</SDLCheck>
             <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -79,7 +78,7 @@
         <Link>
             <AdditionalDependencies>Shlwapi.lib;vfw32.lib;winmm.lib;propsys.lib;Comctl32.lib;zlib-2008-x32.lib;uxtheme.lib;Msimg32.lib;Gdiplus.lib;d2d1.lib;dwrite.lib;deflate.lib;Dbghelp.lib;lua54.lib;Dcomp.lib;D3D11.lib;DXGI.lib;%(AdditionalDependencies)</AdditionalDependencies>
             <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-            <AdditionalLibraryDirectories>../../lib/zlib;../../lua;../../shared;../../;../../lib/libdeflate;../../lib/xxhash;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+            <AdditionalLibraryDirectories>../../lib/zlib;../../lib/lua;../../lib/libdeflate;../../lib/xxhash;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
             <GenerateDebugInformation>true</GenerateDebugInformation>
             <ProgramDatabaseFile>$(OutDir)mupen64_debug.pdb</ProgramDatabaseFile>
             <SubSystem>Windows</SubSystem>
@@ -93,10 +92,13 @@
         <ResourceCompile>
             <ShowProgress>true</ShowProgress>
         </ResourceCompile>
+        <ProjectReference>
+          <UseLibraryDependencyInputs>true</UseLibraryDependencyInputs>
+        </ProjectReference>
     </ItemDefinitionGroup>
     <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
         <ClCompile>
-            <AdditionalIncludeDirectories>../../lib/zlib;../../main;../../lua;../../shared;../../;../../lib/libdeflate;../../lib/xxhash;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+            <AdditionalIncludeDirectories>../../;../../lib/zlib;../../lib/lua/include;../../lib/libdeflate;../../lib/xxhash;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
             <PreprocessorDefinitions>WIN32;_WIN32;NDEBUG;_WINDOWS;__WIN32__;X86;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
             <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
             <PrecompiledHeader>NotUsing</PrecompiledHeader>
@@ -122,7 +124,7 @@
         <Link>
             <AdditionalDependencies>Shlwapi.lib;vfw32.lib;winmm.lib;propsys.lib;Comctl32.lib;zlib-2008-x32.lib;uxtheme.lib;Msimg32.lib;Gdiplus.lib;d2d1.lib;dwrite.lib;deflate.lib;Dbghelp.lib;lua54.lib;Dcomp.lib;D3D11.lib;DXGI.lib;%(AdditionalDependencies)</AdditionalDependencies>
             <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
-            <AdditionalLibraryDirectories>../../lib/zlib;../../lua;../../shared;../../;../../lib/libdeflate;../../lib/xxhash;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+            <AdditionalLibraryDirectories>../../lib/zlib;../../lib/lua;../../lib/libdeflate;../../lib/xxhash;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
             <GenerateDebugInformation>true</GenerateDebugInformation>
             <SubSystem>Windows</SubSystem>
             <OptimizeReferences>true</OptimizeReferences>
@@ -152,7 +154,6 @@
         <ClInclude Include="..\..\main\capture\encoders\FFmpegEncoder.h"/>
         <ClInclude Include="..\..\main\capture\EncodingManager.h"/>
         <ClInclude Include="..\..\main\capture\Resampler.h"/>
-        <ClInclude Include="..\..\main\debughook.h"/>
         <ClInclude Include="..\..\main\win\features\ConfigDialog.h" />
         <ClInclude Include="..\..\main\win\features\CrashHelper.h"/>
         <ClInclude Include="..\..\main\win\features\CoreDbg.h"/>
@@ -217,7 +218,6 @@
         <ClCompile Include="..\..\main\capture\encoders\FFmpegEncoder.cpp"/>
         <ClCompile Include="..\..\main\capture\EncodingManager.cpp"/>
         <ClCompile Include="..\..\main\capture\Resampler.cpp"/>
-        <ClCompile Include="..\..\main\debughook.cpp"/>
         <ClCompile Include="..\..\main\win\features\ConfigDialog.cpp" />
         <ClCompile Include="..\..\main\win\features\CrashHelper.cpp"/>
         <ClCompile Include="..\..\main\win\features\CoreDbg.cpp"/>
