View: Add show debug console menu item

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -131,6 +131,7 @@ BEGIN
     POPUP "&Utilities"
     BEGIN
         MENUITEM "Show &RAM start...",          IDM_RAMSTART
+        MENUITEM "Show &Debug Console...",      IDM_CONSOLE
         MENUITEM "Start &Trace Logger...",      IDM_TRACELOG
         MENUITEM "&CoreDbg...",                 IDM_COREDBG
         MENUITEM "&Run...",                     IDM_RUNNER
