Build: Enable SSE2 on release
Better codegen, how exciting. No obvious issues revealed themselves during testing, it worked on debug for the last 4 years anyway :p

--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -116,7 +116,7 @@
             <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
             <BufferSecurityCheck>true</BufferSecurityCheck>
             <FloatingPointModel>Strict</FloatingPointModel>
-            <EnableEnhancedInstructionSet>NoExtensions</EnableEnhancedInstructionSet>
+            <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
             <LanguageStandard>stdcpplatest</LanguageStandard>
             <SDLCheck>true</SDLCheck>
             <MultiProcessorCompilation>true</MultiProcessorCompilation>
