--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -178,6 +178,7 @@
         <ClInclude Include="..\..\r4300\cop1_helpers.h"/>
         <ClInclude Include="..\..\r4300\disasm.h"/>
         <ClInclude Include="..\..\r4300\exception.h"/>
+        <ClInclude Include="..\..\r4300\gameshark.h" />
         <ClInclude Include="..\..\r4300\interrupt.h"/>
         <ClInclude Include="..\..\r4300\macros.h"/>
         <ClInclude Include="..\..\r4300\ops.h"/>
@@ -281,6 +282,7 @@
             <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
             <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
         </ClCompile>
+        <ClCompile Include="..\..\r4300\gameshark.cpp" />
         <ClCompile Include="..\..\r4300\interrupt.cpp">
             <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
             <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsCpp</CompileAs>
