CoreDbg: Fix instruction listbox ordering

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -407,7 +407,7 @@ BEGIN
     PUSHBUTTON      "Advance",IDC_COREDBG_STEP,54,6,36,18
     CONTROL         "RSP",IDC_COREDBG_RSP_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,54,54,8
     CONTROL         "Cartridge Tilt",IDC_COREDBG_CART_TILT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,72,8
-    LISTBOX         IDC_COREDBG_LIST,0,72,210,180,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_COREDBG_LIST,0,72,210,180,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 
