Lua/D2D: Use LRU cache for text layout caching
Closes #196, needs triage

--- a/winproject/mupen64/mupen64.vcxproj
+++ b/winproject/mupen64/mupen64.vcxproj
@@ -139,6 +139,7 @@
         </Link>
     </ItemDefinitionGroup>
     <ItemGroup>
+        <ClInclude Include="..\..\lib\microlru.h" />
         <ClInclude Include="..\..\lua\modules\avi.h"/>
         <ClInclude Include="..\..\lua\modules\d2d.h"/>
         <ClInclude Include="..\..\lua\modules\emu.h"/>
